# vscode-graph-agent-opencode

./: .env.example  .gitignore  .gitmodules  .vscode-test.mjs  AGENTS.md  AGENTS.zh-CN.md  README.md  audit-wait-20s.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  vscode-graph-agent-opencode.code-workspace
.github/: logging-agent-prompt.md  plan.md  plan.zh-CN.md
.github/agents.zh-CN/: blueprint-mode.agent.zh-CN.md  expert-react-frontend-engineer.agent.zh-CN.md  janitor.agent.zh-CN.md  modernization.agent.zh-CN.md  tech-debt-remediation-plan.agent.zh-CN.md
.github/workflows/: AGENTS.md  package-linux-x64.yml
.kilo/plans/: 1779115817924-tidy-circuit.md
app/: AGENTS.md  container.py  main.py
app/abstractions/: AGENTS.md  __init__.py  background_message_bus.py  custom_tool_context.py  embeddings.py  job_event_bus.py  job_executor.py  job_service.py  job_step_executor.py  pending_request_store.py  session_changes.py  session_context.py  session_orchestrator.py  session_resources.py  session_subagent.py  skill_tool_context.py  team.py  tool_selection.py  trace_event_sink.py
app/agents/: AGENTS.md  agent_factory.py  agent_factory.test.py  agent_middleware.py  agent_tools.py  cache_preserving_summarization.py  context_checkpoint_store.py  context_compaction_adapter.py  custom_tools.py  deep_agent_stack.py  graph_tool_adapter.py  llm_logging_middleware.py  middleware_prompts.py  model_capability_routing.py  model_tool_schema.py  provider_capabilities.py  skill_runtime.py  (+13 more)
backend/: requirements.txt
configs/: AGENTS.md  __init__.py  boxteam.json  boxteam.jsonc  boxteam.py  cli.py  config.json  config.jsonc  defaults.py  development.overlay.jsonc  development_assets.py  installer.py
docs/: middleware-prompt-vscode-comparison.html
examples/: AGENTS.md
packaging/: AGENTS.md
scripts/: AGENTS.md  cross-platform-development-target.mjs  cross-platform-development-target.test.mjs  decode_checkpoint.py  dev.mjs  export_openapi_snapshot.py  gateway-docker-target.mjs  generate_public_types.mjs  setup_test_env.py  test_web_state_display.mjs
src/: AGENTS.md  extension.js
tests/: conftest.py  test_agent_execution.py  test_sessions.py
tools/: Dockerfile.gateway-test  docker-compose.gateway-test.yml
(+896 files in other folders)
