[project]
name = "boxteam"
version = "0.1.0"
description = "VS Code AI 编程助手后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pytest-asyncio>=1.3.0",
    "jsonschema>=4.21.0",
    "cachetools>=5.3.0",
    "commentjson>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.uv]
python-preference = "only-system"

[tool.pytest.ini_options]
asyncio_mode = "auto"
