[project]
name = "boxteam"
version = "0.1.0"
description = "VS Code AI 编程助手后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "httpx>=0.27.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "debugpy>=1.8.1",
    "pytest-asyncio>=1.3.0",
    "jsonschema>=4.21.0",
    "cachetools>=5.3.0",
    "commentjson>=0.9.0",
    "langchain>=1.3.1",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchain-tavily>=0.2.0",
    "langgraph>=1.0.0",
    "deepagents==0.6.2",
    "pytest-xdist>=3.8.0",
    "pydantic-to-typescript>=2.0.0",
    "langchain-litellm==0.7.0",
    "litellm>=1.90.2",
    "langchain-community>=0.4.2",
    "ddgs>=9.14.4",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "unit: 单元测试",
    "e2e: 端到端测试",
]
filterwarnings = [
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning:lark.utils",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning:lark.utils",
]
